# terraform-demo

./: .gitignore  .terraform.lock.hcl  Cargo.toml  README.md  docker-compose.yml  main.tf
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: dev.sh  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts  vite.demo.config.ts
modules/lambda_function/: main.tf  variables.tf
plugin/: README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
plugin/lib/: .env  svelte.config.js
plugin/lib/src/: MyComponent.wc.svelte  SupportButton.svelte  SupportPopup.svelte  generate.ts  index.js  mountCss.ts  stores.ts
plugin/lib/src/components/: Avatar.svelte  EndConversation.svelte  TextInput.svelte
terraform/: .terraform.lock.hcl  bucket.tf  certificates.tf  cloudfront.tf  dynamo.tf  gateway.tf  lambda.tf  main.tf
terraform/modules/lambda_function/: main.tf  outputs.tf  variables.tf
website/: package.json  pnpm-lock.yaml
website/src/: app.html
website/src/lib/components/: Logo.svelte  Navbar.svelte
website/src/routes/: +layout.svelte  +page.svelte  Hero.svelte
