[package]
name = "chat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
openai-api-rs = "4.0.8"
poem = "3.0.0"
poem-lambda = "5.0.0"
serde = "1.0.199"
tokio = {version = "1.37.0",features = ["rt-multi-thread", "macros"]}
