[package]
name = "chat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
base64 = "0.22.1"
hmac = "0.12.1"
openai-api-rs = "4.0.8"
poem = "3.0.0"
poem-lambda = "5.0.0"
serde = "1.0.199"
sha2 = "0.10.8"
tokio = {version = "1.37.0",features = ["rt-multi-thread", "macros"]}
uuid = {version = "1.8.0", features = ["v4"]}
